[gd_scene load_steps=26 format=3 uid="uid://cuu4qwcbjtsdp"]

[ext_resource type="Texture2D" uid="uid://dfwowqetd3brj" path="res://sprites/characters/DefaultCharDownIdle.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dejx68uqdaifh" path="res://sprites/characters/DefaultCharUpIdle.png" id="2"]
[ext_resource type="Script" uid="uid://bobc8wfwh4hhv" path="res://characters/DefaultPlayer.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dprwhvdx0jm1v" path="res://sprites/characters/DefaulCharDownWalkV2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bkfqelgjvdb04" path="res://sprites/characters/DefaultCharacterUpWalk.png" id="5"]
[ext_resource type="Texture2D" uid="uid://br8m0bfu14ys6" path="res://sprites/characters/DefaultCharUpPush.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dl5ub3on4pkjf" path="res://sprites/characters/DefaultCharDownPush.png" id="7"]

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}],
"loop": false,
"name": &"push_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": false,
"name": &"push_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="16"]
radius = 8.08732

[sub_resource type="RectangleShape2D" id="17"]
size = Vector2(19.5625, 11.84632)

[sub_resource type="CapsuleShape2D" id="18"]
radius = 3.00421
height = 6.00842

[node name="DefaultPlayer" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
safe_margin = 0.001
script = ExtResource("3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("15")
animation = &"push_up"
frame = 3
frame_progress = 1.0

[node name="HitBox" type="Area2D" parent="." groups=["player"]]

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.111362, 1.83748)
shape = SubResource("16")

[node name="CollisionShape3D" type="CollisionShape2D" parent="."]
modulate = Color(1, 1, 1, 0.564706)
position = Vector2(0, 3.64191)
shape = SubResource("17")

[node name="PushHitBox" type="Area2D" parent="." groups=["push"]]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushHitBox"]
modulate = Color(1, 0, 0, 1)
position = Vector2(0.0625, 3.03125)
rotation = 1.5708
shape = SubResource("18")
disabled = true

[node name="PushUpHitBox" type="Area2D" parent="." groups=["push"]]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushUpHitBox"]
modulate = Color(1, 0, 0, 1)
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("18")
disabled = true

[node name="PushTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="PushTimer" to="." method="_on_push_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
